@@ -528,7 +528,7 @@ public class VFSFileSystem implements FileSystem {
                 fileSystemManager = new StandardFileSystemManager();
             } else {
                 final Class<?> mgrClass = Class.forName(getFileSystemManagerClassName());
-                fileSystemManager = (FileSystemManager) mgrClass.newInstance();
+                fileSystemManager = (FileSystemManager) mgrClass.getDeclaredConstructor().newInstance();
             }
 
             if (fileSystemManager instanceof DefaultFileSystemManager) {
